app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: my-php
    app.kubernetes.io/component: my-php
    app.kubernetes.io/instance: my-php
    app.kubernetes.io/name: php
  name: my-php
  namespace: mytestapp
spec:
  clusterIP: 10.217.5.5
  clusterIPs:
  - 10.217.5.5
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
  - name: 8443-tcp
    port: 8443
  selector:
    deployment: my-php
