app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: my-php
    app.kubernetes.io/component: my-php
    app.kubernetes.io/instance: my-php
    app.kubernetes.io/name: php
  name: my-php
  namespace: mytestapp
spec:
  host: my-php-mytestapp.apps-crc.testing
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: my-php
    weight: 100
  wildcardPolicy: None
